{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "4d771847-eaaf-4a21-91e6-d5525fa6dca5",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "66ccc97b-e2ed-478f-8a64-3aa5de471507",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PerformAction",
                    "type": "Button",
                    "id": "cfdae44e-9ba0-41a2-8654-ad885e2d0276",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "9eff0944-1f64-43b5-8030-0cfd94d6a8da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextItem",
                    "type": "Button",
                    "id": "6a4823ed-db3b-4907-8454-c2795ec71beb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ae3b9ec-7f96-4192-a96b-f7f5e9253896",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "132b59f1-ed8b-470f-a594-8dd16852674a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerformAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "181cd115-89ba-4add-88d5-de4bb84983a7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "600289a2-3f07-450e-a6c8-cd3641a0043d",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}